feat:Static frontend complete and basic backend Complete

--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,22 @@
   "module": "index.ts",
   "type": "module",
   "private": true,
+  "scripts": {
+    "dev": "bun run --watch /src/index.ts",
+    "dev:debug": "bun run --watch /src/index.ts | jq"
+  },
   "devDependencies": {
-    "@types/bun": "latest"
+    "@types/bun": "latest",
+    "@types/express": "^5.0.2",
+    "@types/socket.io": "^3.0.2",
+    "winston": "^3.17.0"
   },
   "peerDependencies": {
     "typescript": "^5"
+  },
+  "dependencies": {
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "socket.io": "^4.8.1"
   }
 }
